--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello coursera</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Coursera is cool!</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>Hello coursera! it's a great course.</h1>
+
+<script src="js/jquery-1.12.4.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/script.js"></script>
+
+<h1>Coursera is cool!I'm learning so much!</h1>
+
+<div class="container-fluid">
+   <div class="row">
+      <div class="col-md-4 col-sm-6">Col 1</div>
+      <div class="col-md-4 col-sm-6">Col 2</div>
+      <div class="col-md-4 col-sm-6">Col 3</div>
+   </div>
+
+<div class="container-fluid">
+   <div class="row">
+      <div class="col-md-4 col-sm-6">Col 1</div>
+      <div class="col-md-4 col-sm-6">Col 2</div>
+      <div class="col-md-4 col-sm-6">Col 3</div>
+   </div>
+</div>
+
+<div class="container-fluid">
+   <div class="row">
+      <div class="col-xs-6">Col 1</div>
+      <div class="col-xs-6">Col 2</div>
+      <div class="col-xs-6">Col 3</div>
+   </div>
+</div>
+
 </body>
 </html>
