--- a/module-3-solution/index.html
+++ b/module-3-solution/index.html
@@ -34,7 +34,7 @@
                </button>
              </div>
              <div id="collapsable-nav" class="collapse navbar-collapse">
-               <ul id="nav-list" class="nav navbar-nav navbar-right">
+               <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
                  <li>
                    <a href="#" class="text-center">
                     <span></span><br class="hidden-xs text-center">Chicken</a>
